# Capella-Room

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf
.cargo/: config.toml
client/admin/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  shims-vue.d.ts  vite.config.ts
client/android/: .gitignore  README.md  gradlew  settings.gradle.kts
client/debug/: .env.example  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  shims-vue.d.ts  vite.config.ts  vitest.config.ts
client/user/: .env.example  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
client/user_v2/: .env.example  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: README.md  api-documentation.md  backend-refinement-checklist.md  development-roadmap.md  performance-test-report.md
docs/api/: index.md
docs/architecture/: README.md
docs/superpowers/: CAPELLA_ROADMAP_ANALYSIS.md  (+1 more)
migrations/: 001_init.sql  002_add_file_resources.sql  002_ip_security.sql  003_add_message_edits.sql  003_user_ui_config.sql  004_add_system_configs.sql  004_fulltext_search_and_optimization.sql  005_create_notifications.sql  005_user_settings_and_security.sql  006_create_audit_system.sql  006_user_settings_expansion.sql  007_add_pending_action_notifications.sql  007_device_block_feature.sql  008_room_invitation.sql  009_direct_room.sql  010_friends.sql  011_update_audit_event_types.sql  012_performance_optimizations.sql  013_remove_misleading_created_at_index.sql  014_message_reactions.sql  015_pinned_messages.sql  016_drop_audit_logs_actor_id_fk.sql  017_verification_codes.sql  018_add_email_verified_to_users.sql  019_oauth_infrastructure.sql  020_room_resource_bindings.sql  021_webhook_tables.sql  022_custom_events.sql
src/: lib.rs  main.rs  test_helpers.rs
tests/: config_system_test.rs  direct_room_test.rs  friendship_test.rs  integration_test.rs  ip_security_test.rs  pending_action_notification_test.rs  phase1_4_v1_register_admin_test.rs  phase1_5_user_email_verified_test.rs  phase1_infrastructure_test.rs  phase1_v2_auth_test.rs  phase2_authentication_test.rs  phase3_1_oauth_apps_test.rs  phase3_oauth_integration_test.rs  phase3_room_management_test.rs  phase4_notification_system_test.rs  phase4_websocket_test.rs  phase5_messaging_test.rs  phase6_5_file_upload_test.rs  phase6_extra_features_test.rs  phase6_reply_message_test.rs  phase6_user_features_test.rs  phase8_4_alert_system_test.rs  phase8_4_audit_system_test.rs  phase8_4_config_performance_test.rs  phase8_admin_system_test.rs  phaseC1_delete_account_test.rs  phaseC2_pinned_messages_test.rs  redis_integration_test.rs  room_invitation_test.rs  user_settings_test.rs  websocket_test.rs
ui/: package.json  pnpm-lock.yaml
ui-admin/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+869 files in other folders)
