[package]
name = "seredeli-room"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum Web框架
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono", "uuid"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
config = "0.14"
dotenvy = "0.15"
toml = "0.8"

# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 认证与加密
argon2 = "0.5"
jsonwebtoken = "9"

# 工具库
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
once_cell = "1.19"
dashmap = "5.5"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
regex = "1"

# 文件上传
multer = "3.0"
sha2 = "0.10"
hex = "0.4"
mime = "0.3"
mime_guess = "2.0"

[dev-dependencies]
# 测试依赖
reqwest = { version = "0.11", features = ["json"] }
mockall = "0.12"
tokio-tungstenite = "0.21"
http = "1.0"
tempfile = "3.10"
